[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.10"
edition = "2021"
rust-version = "1.64"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/rlp"
repository = "https://github.com/alloy-rs/rlp"
exclude = ["benches/", "tests/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# workspace crates
alloy-rlp = { version = "0.3.10", path = "crates/rlp", default-features = false }
alloy-rlp-derive = { version = "0.3.10", path = "crates/rlp-derive", default-features = false }

# macros
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

hex = { package = "const-hex", version = "1", default-features = false, features = ["alloc"] }
hex-literal = "0.4"

# misc
arrayvec = { version = "0.7", default-features = false }
bytes = { version = "1.4", default-features = false }
